// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test render renders with directories and default 1`] = `
<StyledWithResponsiveMode
  className="defaultDirectoryDropdown"
  defaultSelectedKey="asdfghjklzxcvbnm9876543210"
  label="Set your default directory"
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "lastVisited",
        "text": "Sign in to your last visited directory",
      },
      Object {
        "key": "asdfghjklzxcvbnm9876543210",
        "text": "Macrohard(asdfghjklzxcvbnm9876543210)",
      },
      Object {
        "key": "",
        "text": "()",
      },
    ]
  }
/>
`;

exports[`test render renders with directories and last visit default 1`] = `
<StyledWithResponsiveMode
  className="defaultDirectoryDropdown"
  defaultSelectedKey="lastVisited"
  label="Set your default directory"
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "lastVisited",
        "text": "Sign in to your last visited directory",
      },
      Object {
        "key": "asdfghjklzxcvbnm9876543210",
        "text": "Macrohard(asdfghjklzxcvbnm9876543210)",
      },
      Object {
        "key": "",
        "text": "()",
      },
    ]
  }
/>
`;

exports[`test render renders with directories but no default 1`] = `
<StyledWithResponsiveMode
  className="defaultDirectoryDropdown"
  defaultSelectedKey="lastVisited"
  label="Set your default directory"
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "lastVisited",
        "text": "Sign in to your last visited directory",
      },
      Object {
        "key": "asdfghjklzxcvbnm9876543210",
        "text": "Macrohard(asdfghjklzxcvbnm9876543210)",
      },
      Object {
        "key": "",
        "text": "()",
      },
    ]
  }
/>
`;

exports[`test render renders with no directories 1`] = `
<StyledWithResponsiveMode
  className="defaultDirectoryDropdown"
  defaultSelectedKey="lastVisited"
  label="Set your default directory"
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "lastVisited",
        "text": "Sign in to your last visited directory",
      },
    ]
  }
/>
`;
